@@ -7,7 +7,8 @@ next version <kevin@koconnor.net>
     Warning - most of haret is not thread-safe, so care should be
     taken to not run intricate commands simultaneously.
 
-  * Add new commands: LOG, UNLOG, PS, KILL, LOADLIBRARYEX, NLEDSET
+  * Add new commands: LOG, UNLOG, PS, KILL, LOADLIBRARYEX, NLEDSET,
+    LSMOD, POWERMON
 
   * Removed support for command-line options "-r" and "-k".  These
     options are superseded by the linload.exe program and the command
